--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -1,4 +1,11 @@
-<div ng-cloak>
-	<a ui-sref="home">Home</a>
-	<a ui-sref="contactUs">Contact Us</a>
+<div class="navbar navbar-default">
+
+	<div class="container">
+		<div ng-cloak class="link-block">
+			 <a ui-sref="home">Home</a>
+			 <a ui-sref="contactUs">Contact Us</a>
+			 <a ng-click="vm.login()">Log In</a>
+		</div>
+	</div>
+
 </div>
