--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -4,6 +4,7 @@
 		<div ng-cloak class="link-block">
 			 <a ui-sref="home">Home</a>
 			 <a ui-sref="contactUs">Contact Us</a>
+			 <a ui-sref="thumbnailGeneratorTest">Thumbnail Test</a>
 			 <a ng-click="vm.login()">Log In</a>
 		</div>
 	</div>
