--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -5,6 +5,7 @@
 			 <a ui-sref="home">Home</a>
 			 <a ui-sref="contactUs">Contact Us</a>
 			 <a ui-sref="thumbnailGeneratorTest">Thumbnail Test</a>
+			 <a ui-sref="location">Location Test</a>
 			 <a ng-click="vm.login()">Log In</a>
 		</div>
 	</div>
